Major dotfiles rewrite; behold!

--- a/README
+++ b/README
@@ -1,4 +1,9 @@
 Dotfiles for my environment.
 
+Thanks to:
+  * https://github.com/mathiasbynens/dotfiles
+  * https://github.com/gf3/dotfiles
+  * https://github.com/sjl/oh-my-zsh
+
 Ivan Pouzyrevsky,
 sandello@gmail.com.
