--- a/README
+++ b/README
@@ -1,5 +1,10 @@
 Dotfiles for my environment.
 
+To deploy:
+```
+curl https://raw.github.com/sandello/dotfiles/master/deploy.py | python - --bootstrap
+```
+
 Thanks to:
   * https://github.com/mathiasbynens/dotfiles
   * https://github.com/gf3/dotfiles
