--- a/README
+++ b/README
@@ -10,5 +10,5 @@ Thanks to:
   * https://github.com/gf3/dotfiles
   * https://github.com/sjl/oh-my-zsh
 
-Ivan Pouzyrevsky,
+Ivan Puzyrevskiy,
 sandello@gmail.com.
